--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ h1 {
 body {
   overflow-x: hidden;
 }
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px rgba(255, 255, 255, 0) inset !important;
+  background-color: transparent !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
